@@ -5,13 +5,12 @@ import java.util.stream.Collectors;
 
 // BEGIN
 public class App {
-    public static List<String> buildApartmentsList(List<Home> apartments, int n) {
-        Collections.sort(apartments, Comparator.comparingDouble(Home::getArea));
-        List<String>apartment = apartments.stream()
-                .limit(n)
+    public static List<String> buildApartmentsList(List<Home> apartments, int count) {
+        return apartments.stream()
+                .sorted(Home::compareTo)
+                .limit(count)
                 .map(Home::toString)
-                .collect(Collectors.toList());
-        return apartment;
+                .toList();
     }
 }
 // END
